remove double titre in VC OpenAgenda Single

--- a/assets/css/p2p5-openagenda.css
+++ b/assets/css/p2p5-openagenda.css
@@ -161,6 +161,7 @@ h3.p2p5-vc-element-openagenda-details-title {
 
 .p2p5-vc-element-openagenda-details-description {
 	font-size: 15px;
+	clear: both;
 }
 
 .p2p5-vc-element-openagenda-details-readmore {
