--- a/assets/css/p2p5-openagenda.css
+++ b/assets/css/p2p5-openagenda.css
@@ -217,6 +217,9 @@ h3.p2p5-vc-element-openagenda-details-title {
 	text-align: center;
 }
 
+.p2p5-vc-element-openagenda-single .p2p5-vc-element-openagenda-details-cat {
+	background-color: inherit;
+}
 .bloc-openagenda .bloc-openagenda__box-title {
 	text-transform: none;
 	font-family: 'Open Sans';
