--- a/assets/css/p2p5-openagenda.css
+++ b/assets/css/p2p5-openagenda.css
@@ -157,6 +157,7 @@ p.bloc-openagenda__lieu {
 h3.p2p5-vc-element-openagenda-details-title {
 	line-height: 1;
 	font-size: 22px;
+	margin-top: 22px;
 }
 
 .p2p5-vc-element-openagenda-details-description {
